feat(web backend): oauth jwt stuff started on backend and fixing auth flow to be handled properly